force-app/main/default/objects/Contract/fields/Contract_Form_Template__c.field-meta.xml
<CustomField>
    <fullName>Contract_Form_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Form Template</label>
    <referenceTo>Contract_Form_Template__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>