force-app/main/default/objects/Contract/fields/Contract_Information__c.field-meta.xml
<CustomField>
    <fullName>Contract_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Information</label>
    <referenceTo>Contract_Information__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>