force-app/main/default/objects/Contract/fields/Delivery_Time__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Time__c</fullName>
    <label>Delivery Time</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>