force-app/main/default/objects/Contract/fields/Payment_1__c.field-meta.xml
<CustomField>
    <fullName>Payment_1__c</fullName>
    <label>Payment 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>