force-app/main/default/objects/Contract/fields/Tentative_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Tentative_Delivery_Date__c</fullName>
    <label>Tentative Delivery Date</label>
    <type>Date</type>
</CustomField>